k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pusterom
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["pusterom.example.no"]
      secretName: pusterom-tls
  rules:
    - host: pusterom.example.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pusterom
                port:
                  name: http
